[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/Tarrow.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/turretArrow.gd" type="Script" id=2]
[ext_resource path="res://img/pjCircle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.3744

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.75
height = 8.0

[node name="turretArrow" type="Node2D"]
script = ExtResource( 2 )

[node name="magic" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.713726, 0.101961, 0.101961, 1 )
rotation = -1.5708
scale = Vector2( 0.679843, 0.774293 )
texture = ExtResource( 3 )

[node name="ranged" type="Sprite" parent="."]
visible = false
position = Vector2( -0.290671, 3.87677e-05 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 9.7093, -0.31498 )

[node name="turretArrow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="turretArrow"]
position = Vector2( 10.7093, -0.31498 )
shape = SubResource( 1 )
disabled = true

[node name="magicHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="magicHitbox"]
rotation = -1.5708
scale = Vector2( 4, 4 )
shape = SubResource( 2 )
disabled = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="turretArrow" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="turretArrow" to="." method="_on_hitbox_body_entered"]
[connection signal="area_entered" from="magicHitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="magicHitbox" to="." method="_on_hitbox_body_entered"]
